# BitScrape

./: .clang-format  .clangd  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build-cmake.sh  build.ninja  build.sh  clangd_setup_instructions.md  meson.build  meson_options.txt  sonar-project.properties  test_cli.py  update_tests.sh
apps/: CMakeLists.txt  meson.build
apps/cli/: CMakeLists.txt  Makefile  main.cpp  meson.build
apps/cli/src/: main.cpp  simple_cli.cpp
apps/gui/: CMakeLists.txt  meson.build
apps/gui/src/: main.cpp
apps/web/: CMakeLists.txt  Info.plist  api_handler.cpp  http_router.cpp  main.mm  menubar_controller.cpp  websocket_server.cpp
apps/web/public/: index.html
apps/web/public/css/: styles.css  tailwind.min.css
apps/web/public/js/: api-client.js  app.js  chart-manager.js  chart.min.js  data-manager.js  network-visualizer.js  particle-background.js  particles.min.js  theme-manager.js  three.min.js  ui-controller.js
apps/web/src/: http_server.cpp  main.cpp  static_file_handler.cpp
bitscrape/: README.md  fix_tests.sh  meson.build  meson_options.txt  update_gtest.sh
bitscrape/modules/bencode/: meson.build
bitscrape/modules/bencode/src/: bencode_event_processor.cpp  bencode_stream.cpp  bencode_value.cpp
bitscrape/modules/dht/: meson.build
bitscrape/modules/dht/src/: bootstrap.cpp  dht_session.cpp  node_lookup.cpp  token_manager.cpp
bitscrape/modules/event/: meson.build
bitscrape/modules/event/src/: async_event_processor.cpp  event_adapter.cpp  event_bus.cpp  event_processor.cpp
bitscrape/modules/network/: meson.build
bitscrape/modules/network/src/: http_client.cpp  nat_traversal.cpp  network_event_processor.cpp  tcp_listener.cpp  tcp_socket.cpp
bitscrape/modules/types/: README.md  meson.build
bitscrape/modules/types/src/: dht_node.cpp  dht_routing_table_entry.cpp  dht_token.cpp  endpoint.cpp  event_types.cpp  info_hash.cpp  metadata_piece.cpp
modules/beacon/: CMakeLists.txt  Makefile  meson.build
modules/beacon/src/: beacon.cpp  beacon_adapter.cpp  beacon_sink.cpp  console_sink.cpp  event_sink.cpp  file_sink.cpp
modules/beacon/tests/unit/: beacon_adapter_test.cpp  beacon_sink_test.cpp  beacon_test.cpp  console_sink_test.cpp  event_sink_test.cpp  file_sink_test.cpp
modules/bencode/: CMakeLists.txt  Makefile  meson.build
modules/bencode/src/: bencode_decoder.cpp  bencode_encoder.cpp  bencode_event_processor.cpp  bencode_validation_event.cpp
modules/bencode/tests/unit/: bencode_decoder_test.cpp  bencode_encoder_test.cpp  bencode_event_processor_test.cpp  bencode_stream_test.cpp  bencode_validation_event_test.cpp  bencode_value_test.cpp
modules/bittorrent/: CMakeLists.txt  Makefile  meson.build
modules/bittorrent/src/: bittorrent_event_processor.cpp  extended_message.cpp  metadata_exchange.cpp  peer_connection.cpp  peer_manager.cpp  peer_message.cpp  peer_wire_protocol.cpp
modules/bittorrent/tests/unit/: bittorrent_event_processor_test.cpp  metadata_exchange_test.cpp  peer_connection_test.cpp  peer_manager_test.cpp  peer_message_test.cpp  peer_wire_protocol_test.cpp
modules/core/: CMakeLists.txt  Makefile  meson.build
modules/core/src/: configuration.cpp  controller.cpp  persistence.cpp
modules/core/tests/unit/: configuration_test.cpp  configuration_tests.cpp  controller_test.cpp  controller_tests.cpp  persistence_test.cpp
modules/dht/: CMakeLists.txt  Makefile  README.md  meson.build
modules/dht/src/: bootstrap.cpp  dht_announce_peer_message.cpp  dht_find_node_message.cpp  dht_get_peers_message.cpp  dht_message.cpp  dht_message_factory.cpp  dht_session.cpp  k_bucket.cpp  node_lookup.cpp  routing_table.cpp  token_manager.cpp
modules/dht/tests/unit/: bootstrap_test.cpp  dht_message_factory_test.cpp  dht_message_test.cpp  dht_session_test.cpp  k_bucket_test.cpp  routing_table_test.cpp  token_manager_test.cpp
modules/event/: CMakeLists.txt  Makefile  meson.build
modules/event/src/: async_event_processor.cpp  event_filter.cpp
modules/event/tests/unit/: async_event_processor_test.cpp  event_adapter_test.cpp  event_bus_test.cpp  event_filter_test.cpp  event_processor_test.cpp
modules/lock/: CMakeLists.txt  Makefile  README.md
modules/lock/examples/: lock_manager_example.cpp
modules/lock/src/: lock_exceptions.cpp  lock_guard.cpp  lock_manager.cpp  lock_manager_singleton.cpp
modules/lock/test/: CMakeLists.txt  lock_manager_test.cpp
modules/network/: CMakeLists.txt  Makefile  meson.build
modules/network/src/: address.cpp  buffer.cpp  http_client.cpp  nat_traversal.cpp  network_bandwidth_event.cpp  network_event_processor.cpp  socket.cpp  tcp_listener.cpp  tcp_socket.cpp  udp_socket.cpp
modules/network/tests/unit/: address_test.cpp  buffer_test.cpp  network_bandwidth_event_test.cpp  socket_test.cpp
modules/storage/: CMakeLists.txt  Makefile  meson.build
modules/storage/src/: data_models.cpp  database.cpp  key_value_store.cpp  migration_manager.cpp  query_interface.cpp  storage_manager.cpp
modules/storage/tests/: run_tests.cpp  run_tests.sh
modules/storage/tests/unit/: data_models_test.cpp  database_test.cpp  migration_manager_test.cpp  query_interface_test.cpp  storage_manager_test.cpp
modules/tracker/: CMakeLists.txt  Makefile
modules/tracker/src/: http_tracker.cpp  tracker_announce.cpp  tracker_event.cpp  tracker_event_processor.cpp  tracker_manager.cpp  tracker_request.cpp  tracker_response.cpp  tracker_scrape.cpp  tracker_statistics_event.cpp  udp_tracker.cpp
modules/tracker/tests/unit/: http_tracker_test.cpp  tracker_announce_test.cpp  tracker_event_processor_test.cpp  (+7 more)
modules/types/: CMakeLists.txt  Makefile  README.md  meson.build
modules/types/src/: beacon_types.cpp  info_hash.cpp  message_types.cpp  metadata_info.cpp  node_id.cpp  torrent_info.cpp
modules/types/tests/: CMakeLists.txt
modules/web/: CMakeLists.txt  Makefile
modules/web/src/: api_handler.cpp  http_router.cpp  http_server.cpp  static_file_handler.cpp  web_controller.cpp  websocket_server.cpp
modules/web/tests/: CMakeLists.txt
(+206 files in other folders)
