option('enable_asan', type : 'boolean', value : false, description : 'Enable AddressSanitizer')
option('build_tests', type : 'boolean', value : true, description : 'Build tests')
option('build_tools', type : 'boolean', value : true, description : 'Build tools')
option('build_examples', type : 'boolean', value : true, description : 'Build examples')
option('build_gui', type : 'boolean', value : true, description : 'Build GUI application')
option('build_cli', type : 'boolean', value : true, description : 'Build CLI application')
option('build_docs', type : 'boolean', value : false, description : 'Build documentation')
option('enable_web_interface', type : 'boolean', value : true, description : 'Enable web interface')
option('enable_nat_traversal', type : 'boolean', value : true, description : 'Enable NAT traversal')
